--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
   
-<script type="text/javascript" src="/app.bundle.js"></script><script type="text/javascript" src="/sass.bundle.js"></script></body>
+</body>
 </html>
