fix code, and add base folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="icon.png" alt="" />
+  <img src="./images/icon.png" alt="" />
 </body>
 </html>
